# fast_api_todo

./: docker-compose.yaml  pyproject.toml
api/: database.py  main.py  schema.py
