[tool.poetry]
name = "python3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
motor = "2.5.1"
fastapi-csrf-protect = "0.2.1"
pyjwt = "2.3.0"
passlib = "1.7.4"
python-decouple = "3.3"
dnspython = "2.1.0"
gunicorn = "20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
